# agentic-rag-BE-v2

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  example.env  pyproject.toml  requirements.txt
alembic/: README  env.py
alembic/versions/: 27c147a12749_add_users_table.py  3296763c9cec_add_users_table.py  89207aa44d23_add_roles_table.py
app/: main.py  sys.stdout
app/agents/agentic_rag/: graph.py  nodes.py  tools.py
app/agents/common/: callbacks.py  checkpointer.py
app/agents/rag/: graph.py  nodes.py  prompts.py  state.py
app/config/: activity_logger.py  constants.py  cors_options.py  database.py  embedding.py  llms.py  logger.py  models.py  redis_client.py  settings.py  vector_db.py
app/dependencies/: auth.py  captcha.py  fingerprint.py
app/exceptions/: custom_errors.py  http_exception_filter.py
app/queues/: tasks.py  worker.py
app/routers/v1/: calendar_router.py  chat_router.py  datasource_router.py  router.py  session_router.py
app/schemas/: calendar_schema.py  chat_schema.py  datasource_schema.py  session_schema.py
app/seeders/: role_data.py  seed.py  user_data.py
app/services/: calendar_service.py  chat_service.py  datasource_service.py  session_service.py  user_service.py
app/utils/: crawler.py  execution_time_tracker.py  otp_utils.py  password_utils.py
app/vector_db/: base_vector_db.py  chroma_vector_db.py  milvus_db.py  pg_vector_db.py
