[project]
name = "agentic-rag-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "aiosqlite==0.21.0",
    "alembic==1.14.0",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "anthropic==0.52.0",
    "anyio==4.8.0",
    "attrs==25.3.0",
    "backoff==2.2.1",
    "beautifulsoup4==4.13.4",
    "billiard==4.2.1",
    "black==24.10.0",
    "brotli==1.1.0",
    "cachetools==5.5.2",
    "celery==5.5.2",
    "certifi==2024.12.14",
    "cffi==1.17.1",
    "cfgv==3.4.0",
    "chardet==5.2.0",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "crawl4ai==0.6.3",
    "cryptography==45.0.3",
    "cssselect==1.3.0",
    "dataclasses-json==0.6.7",
    "distlib==0.3.9",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "emoji==2.14.1",
    "fake-http-header==0.3.5",
    "fake-useragent==2.2.0",
    "fastapi==0.115.6",
    "fastapi-cli==0.0.7",
    "filelock==3.16.1",
    "filetype==1.2.0",
    "flake8==7.1.1",
    "flake8-print==5.0.0",
    "frozenlist==1.6.0",
    "fsspec==2025.3.2",
    "google-ai-generativelanguage==0.6.17",
    "google-api-core==2.24.2",
    "google-auth==2.39.0",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.1.1",
    "groq==0.25.0",
    "grpcio==1.67.1",
    "grpcio-status==1.62.3",
    "h11==0.14.0",
    "html5lib==1.1",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "httpx-aiohttp==0.1.4",
    "httpx-sse==0.4.0",
    "huggingface-hub==0.30.2",
    "humanize==4.12.3",
    "identify==2.6.5",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "isort==5.13.2",
    "jinja2==3.1.6",
    "jiter==0.9.0",
    "joblib==1.4.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "kombu==5.5.3",
    "langchain==0.3.25",
    "langchain-anthropic==0.3.13",
    "langchain-community==0.3.24",
    "langchain-core==0.3.61",
    "langchain-google-genai==2.1.3",
    "langchain-groq==0.3.2",
    "langchain-huggingface==0.1.2",
    "langchain-milvus==0.1.10",
    "langchain-openai==0.3.14",
    "langchain-text-splitters==0.3.8",
    "langdetect==1.0.9",
    "langfuse==2.60.7",
    "langgraph==0.4.7",
    "langgraph-checkpoint==2.0.26",
    "langgraph-checkpoint-postgres==2.0.21",
    "langgraph-prebuilt==0.2.1",
    "langgraph-sdk==0.1.70",
    "langsmith==0.3.34",
    "litellm==1.71.1",
    "loguru==0.7.3",
    "lxml==5.4.0",
    "mako==1.3.8",
    "markdown==3.8",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "mccabe==0.7.0",
    "mdurl==0.1.2",
    "milvus-lite==2.4.12",
    "mpmath==1.3.0",
    "multidict==6.4.3",
    "mypy-extensions==1.0.0",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "nltk==3.9.1",
    "nodeenv==1.9.1",
    "numpy==2.2.5",
    "nvidia-cublas-cu12==12.6.4.1",
    "nvidia-cuda-cupti-cu12==12.6.80",
    "nvidia-cuda-nvrtc-cu12==12.6.77",
    "nvidia-cuda-runtime-cu12==12.6.77",
    "nvidia-cudnn-cu12==9.5.1.17",
    "nvidia-cufft-cu12==11.3.0.4",
    "nvidia-cufile-cu12==1.11.1.6",
    "nvidia-curand-cu12==10.3.7.77",
    "nvidia-cusolver-cu12==11.7.1.2",
    "nvidia-cusparse-cu12==12.5.4.2",
    "nvidia-cusparselt-cu12==0.6.3",
    "nvidia-nccl-cu12==2.26.2",
    "nvidia-nvjitlink-cu12==12.6.85",
    "nvidia-nvtx-cu12==12.6.77",
    "olefile==0.47",
    "openai==1.76.0",
    "orjson==3.10.16",
    "ormsgpack==1.10.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "passlib==1.7.4",
    "pathspec==0.12.1",
    "phonenumbers==9.0.4",
    "pillow==10.4.0",
    "platformdirs==4.3.6",
    "playwright==1.52.0",
    "pre-commit==4.0.1",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.1",
    "proto-plus==1.26.1",
    "protobuf==6.30.2",
    "psutil==7.0.0",
    "psycopg==3.2.9",
    "psycopg-pool==3.2.6",
    "psycopg2==2.9.10",
    "psycopg2-binary==2.9.10",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycodestyle==2.12.1",
    "pycparser==2.22",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pydantic-extra-types==2.10.3",
    "pydantic-settings==2.7.1",
    "pyee==13.0.0",
    "pyflakes==3.2.0",
    "pygments==2.19.1",
    "pyjwt==2.10.1",
    "pymilvus==2.5.7",
    "pyopenssl==25.1.0",
    "pyotp==2.9.0",
    "pypdf==5.5.0",
    "pyperclip==1.9.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-iso639==2025.2.18",
    "python-magic==0.4.27",
    "python-multipart==0.0.20",
    "python-oxmsg==0.0.2",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "rank-bm25==0.2.2",
    "rapidfuzz==3.13.0",
    "redis==5.2.1",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rich==13.9.4",
    "rich-toolkit==0.12.0",
    "rpds-py==0.25.1",
    "rsa==4.9.1",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "sentence-transformers==4.1.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "snowballstemmer==2.2.0",
    "soupsieve==2.7",
    "sqlalchemy==2.0.37",
    "starlette==0.41.3",
    "sympy==1.13.3",
    "tenacity==9.1.2",
    "tf-playwright-stealth==1.1.2",
    "threadpoolctl==3.6.0",
    "tiktoken==0.9.0",
    "tokenizers==0.21.1",
    "torch==2.7.0",
    "tqdm==4.67.1",
    "transformers==4.51.3",
    "triton==3.3.0",
    "typer==0.15.1",
    "typing-extensions==4.12.2",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "ujson==5.10.0",
    "unstructured==0.17.2",
    "unstructured-client==0.36.0",
    "urllib3==2.4.0",
    "uvicorn==0.34.0",
    "uvloop==0.21.0",
    "vine==5.1.0",
    "virtualenv==20.28.1",
    "watchfiles==1.0.4",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "websockets==14.1",
    "wrapt==1.17.2",
    "xxhash==3.5.0",
    "yarl==1.20.0",
    "zipp==3.22.0",
    "zstandard==0.23.0",
]
