[project]
name = "schedule-pro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "crawl4ai>=0.7.4",
    "fastapi[standard]>=0.117.1",
    "google-api-python-client>=2.183.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "kombu-sqlalchemy>=1.1.0",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.20",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.12",
    "langchain-groq>=0.3.8",
    "langchain-huggingface>=0.3.1",
    "langchain-milvus>=0.2.1",
    "langchain-openai>=0.3.33",
    "langchain-postgres>=0.0.15",
    "langgraph>=0.6.7",
    "langgraph-checkpoint-postgres>=2.0.23",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "phonenumbers>=9.0.14",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary,pool]>=3.2.10",
    "pydantic-extra-types>=2.10.5",
    "pyjwt>=2.10.1",
    "pymupdf>=1.26.4",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
]
